# timemory

./: .travis.yml  CMakeLists.txt  pyctest-runner.py
cmake/Modules/: MacroUtilities.cmake  Options.cmake  Packages.cmake  PythonConfig.cmake
examples/ex-gpu-roofline/: CMakeLists.txt
source/python/: CMakeLists.txt  libpytimemory-components.cpp  libpytimemory-components.hpp  libpytimemory-enumeration.cpp  libpytimemory-statistics.cpp  libpytimemory-storage.cpp  libpytimemory.cpp  libpytimemory.hpp
source/tests/: CMakeLists.txt  mpl_tests.cpp
source/timemory/: CMakeLists.txt  enum.h  types.hpp
source/timemory/components/: properties.hpp
source/timemory/components/data_tracker/: components.hpp
source/timemory/components/timing/: backends.hpp
source/timemory/plotting/: definition.hpp  types.hpp
source/timemory/runtime/: properties.hpp
source/timemory/settings/: settings.cpp  settings.hpp
source/timemory/tpls/cereal/cereal/details/: static_object.hpp
source/timemory/utility/: utility.hpp
source/tools/timemory-avail/: CMakeLists.txt
source/tools/timemory-compiler-instrument/: CMakeLists.txt  compiler-instrument-base.cpp
source/tools/timemory-jump/: CMakeLists.txt
source/tools/timemory-run/: CMakeLists.txt
source/tools/timemory-stubs/: CMakeLists.txt
source/tools/timemory-timem/: timem.cpp  timem.hpp
timemory/: __init__.py.in
